tests/baselines/reference/tsxUnionTypeComponent2.errors.txt
file.tsx(7,2): error TS2604: JSX element type 'X' does not have any construct or call signatures.


==== file.tsx (1 errors) ====
    import React = require('react');
    
    type Invalid1 = React.ComponentClass<any> | number;
    
    const X: Invalid1 = 1;
    
    <X />;
     ~
!!! error TS2604: JSX element type 'X' does not have any construct or call signatures.
    
    
    